service translated to arabic

--- a/ar/contact.html
+++ b/ar/contact.html
@@ -396,7 +396,7 @@
                 <div class="logo text-center">
                   <span
                     class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-br from-green-400 to-orange-600"
-                    >Financial.</span
+                    >أبشر.</span
                   >
                 </div>
                 <h3 class="text-gray-400">
@@ -406,38 +406,40 @@
               </div>
             </div>
             <div class="flex flex-col">
-              <div class="head text-3xl font-bold">Quick Links</div>
+              <div class="head text-3xl font-bold">روابط سريعة</div>
               <ul
                 class="list-none flex flex-col text-lg text-white gap-y-3 mt-5"
               >
-                <li><a href="#home">Home</a></li>
-                <li><a href="#Partners">Partners</a></li>
-                <li><a href="#Services">Services</a></li>
-                <li><a href="#FAQ">FAQ</a></li>
-                <li><a href="#">Privacy &amp; Policy</a></li>
-                <li><a href="#contact-us">Contact Us</a></li>
+                <li><a href="#home">الرئيسية</a></li>
+                <li><a href="#Partners">الشركاء</a></li>
+                <li><a href="#Services">الخدمات</a></li>
+                <li><a href="#FAQ">الأسئلة الشائعة</a></li>
+                <li><a href="#">الخصوصية</a></li>
+                <li><a href="#contact-us">الإتصال</a></li>
               </ul>
             </div>
             <div class="flex flex-col">
               <div class="flex flex-col text-white gap-y-3">
                 <div class="flex flex-col gap-y-2">
-                  <div class="text-white text-2xl">Location</div>
+                  <div class="text-white text-2xl">الموقع</div>
                   <p class="text-sm">
                     Saudi Arbia - Alreyad - street(name street)
                   </p>
                 </div>
                 <div class="flex flex-col gap-y-2">
-                  <div class="text-white text-2xl">Email</div>
+                  <div class="text-white text-2xl">البريد الإلكتروني</div>
                   <p class="text-sm">Fianacial23@gmail.com</p>
                 </div>
                 <div class="flex flex-col gap-y-2">
-                  <div class="text-white text-2xl">Call Us</div>
+                  <div class="text-white text-2xl">إتصل بنا</div>
                   <p class="text-sm">+00966 9084234521</p>
                 </div>
               </div>
             </div>
             <div class="flex flex-col">
-              <div class="head text-3xl font-bold w-full">Social Media</div>
+              <div class="head text-3xl font-bold w-full">
+                وسائل التواصل الاجتماعي
+              </div>
               <div class="grid grid-cols-3 text-white mt-5 gap-2 w-2/4">
                 <a
                   href="#"
@@ -484,7 +486,7 @@
         </div>
         <div class="copywrights copywrights py-10">
           <div class="flex justify-center items-center font-bold">
-            Copyrights © 2021
+            <span x-text="new Date().getFullYear()"></span> © الحقوق محفوظة
           </div>
         </div>
       </div>
