--- a/ar/index.html
+++ b/ar/index.html
@@ -100,19 +100,13 @@
           class="absolute inset-x-0 z-20 w-full px-6 py-4 transition-all duration-300 ease-in-out bg-white shadow-md lg:bg-transparent lg:dark:bg-transparent lg:shadow-none dark:bg-gray-900 lg:mt-0 lg:p-0 lg:top-0 lg:relative lg:w-auto lg:opacity-100 lg:translate-x-0 lg:flex lg:items-center"
         >
           <div class="flex flex-col space-y-4 lg:mt-0 lg:flex-row lg:space-y-0">
-            <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-blue-400 hover:text-blue-500"
-              href="#"
+            <a class="text-green-500 lg:mx-6 hover:text-green-400" href="#"
               >الرئيسية</a
             >
-            <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-blue-400 hover:text-blue-500"
-              href="#"
+            <a class="text-gray-700 lg:mx-6 hover:text-green-500" href="#"
               >من نحن</a
             >
-            <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-blue-400 hover:text-blue-500"
-              href="#"
+            <a class="text-gray-700 lg:mx-6 hover:text-green-500" href="#"
               >الشركاء</a
             >
             <div
@@ -122,7 +116,7 @@
               <div
                 x-cloak
                 @click="isServicesMenuOpen = !isServicesMenuOpen"
-                class="flex items-end hover:text-blue-500 gap-x-2"
+                class="flex items-end hover:text-green-500 gap-x-2"
               >
                 <span>الخدمات</span>
                 <svg
@@ -149,36 +143,36 @@
                 <ul class="w-full flex flex-col gap-y-4 text-sm">
                   <li class="">
                     <a
-                      class="hover:text-blue-500"
-                      href="/pages/services/personal.html"
+                      class="hover:text-green-500"
+                      href="/ar/pages/services/personal.html"
                       >التمويل الشخصي</a
                     >
                   </li>
                   <li class="">
                     <a
-                      class="hover:text-blue-500"
-                      href="/pages/services/student.html"
+                      class="hover:text-green-500"
+                      href="/ar/pages/services/student.html"
                       >تمويل الطلاب</a
                     >
                   </li>
                   <li class="">
                     <a
-                      class="hover:text-blue-500"
-                      href="/pages/services/products.html"
+                      class="hover:text-green-500"
+                      href="/ar/pages/services/products.html"
                       >تمويل المنتجات</a
                     >
                   </li>
                   <li>
                     <a
-                      class="hover:text-blue-500"
-                      href="/pages/services/offers.html"
+                      class="hover:text-green-500"
+                      href="/ar/pages/services/offers.html"
                       >العروض</a
                     >
                   </li>
                 </ul>
               </div>
             </div>
-            <a class="lg:mx-6 text-green-500" href="#">الأسئلة الشائعة</a>
+            <a class="lg:mx-6 text-gray-700" href="faq.html">الأسئلة الشائعة</a>
             <a class="lg:mx-6 text-gray-700" href="contact.html">الإتصال</a>
           </div>
 
@@ -1668,10 +1662,10 @@
       <section class="container section bg-white animate__" id="services">
         <div class="container px-6 py-10 mx-auto">
           <span class="text-primary mb-2 block text-lg font-semibold animate__">
-            Services
+            خدماتنا
           </span>
           <h2 class="text-dark mb-8 text-3xl font-bold sm:text-4xl animate__">
-            Our Awesome <span class="text-green-500">Services</span>
+            <span class="text-green-500">خدماتنا</span> المميزة
           </h2>
 
           <div
@@ -1701,7 +1695,7 @@
               <h1
                 class="text-2xl font-semibold text-gray-700 capitalize dark:text-white"
               >
-                personal Finance
+                التمويل الشخصي
               </h1>
 
               <p class="text-gray-500 dark:text-gray-300">
@@ -1714,7 +1708,7 @@
                 href="/pages/services/personal.html"
                 class="inline-flex items-center -mx-1 text-sm text-green-500 capitalize transition-colors duration-300 transform dark:text-green-400 hover:underline hover:text-green-600 dark:hover:text-green-500"
               >
-                <span class="mx-1">read more</span>
+                <span class="mx-1">قراءة المزيد</span>
                 <svg
                   class="w-4 h-4 mx-1 rtl:-scale-x-100"
                   fill="currentColor"
@@ -1754,7 +1748,7 @@
               <h1
                 class="text-2xl font-semibold text-gray-700 capitalize dark:text-white"
               >
-                Students Finance
+                تمويل الطلاب
               </h1>
 
               <p class="text-gray-500 dark:text-gray-300">
@@ -1767,7 +1761,7 @@
                 href="/pages/services/student.html"
                 class="inline-flex items-center -mx-1 text-sm text-green-500 capitalize transition-colors duration-300 transform dark:text-green-400 hover:underline hover:text-green-600 dark:hover:text-green-500"
               >
-                <span class="mx-1">read more</span>
+                <span class="mx-1">قراءة المزيد</span>
                 <svg
                   class="w-4 h-4 mx-1 rtl:-scale-x-100"
                   fill="currentColor"
@@ -1807,7 +1801,7 @@
               <h1
                 class="text-2xl font-semibold text-gray-700 capitalize dark:text-white"
               >
-                Products Finance
+                تمويل المنتجات
               </h1>
 
               <p class="text-gray-500 dark:text-gray-300">
@@ -1820,7 +1814,7 @@
                 href="/pages/services/products.html"
                 class="inline-flex items-center -mx-1 text-sm text-green-500 capitalize transition-colors duration-300 transform dark:text-green-400 hover:underline hover:text-green-600 dark:hover:text-green-500"
               >
-                <span class="mx-1">read more</span>
+                <span class="mx-1">قراءة المزيد</span>
                 <svg
                   class="w-4 h-4 mx-1 rtl:-scale-x-100"
                   fill="currentColor"
@@ -1860,7 +1854,7 @@
               <h1
                 class="text-2xl font-semibold text-gray-700 capitalize dark:text-white"
               >
-                Offers
+                العروض
               </h1>
 
               <p class="text-gray-500 dark:text-gray-300">
@@ -1873,7 +1867,7 @@
                 href="/pages/services/offers.html"
                 class="inline-flex items-center -mx-1 text-sm text-green-500 capitalize transition-colors duration-300 transform dark:text-green-400 hover:underline hover:text-green-600 dark:hover:text-green-500"
               >
-                <span class="mx-1">read more</span>
+                <span class="mx-1">قراءة المزيد</span>
                 <svg
                   class="w-4 h-4 mx-1 rtl:-scale-x-100"
                   fill="currentColor"
@@ -1933,7 +1927,7 @@
       <!-- news latter -->
       <section class="container section">
         <div class="w-full text-start bg-green-500 p-8 rounded-lg text-white">
-          <h1 class="text-3xl font-semibold">Want to see Back in action?</h1>
+          <h1 class="text-3xl font-semibold">اشترك في مجلتنا</h1>
           <p class="max-w-md mt-5">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Perferendis, minus tempora nemo quos
@@ -1945,7 +1939,7 @@
             <form class="flex flex-col lg:flex-row">
               <input
                 type="email"
-                placeholder="Enter your email address"
+                placeholder="أكتب ايميلك"
                 class="flex-1 h-10 px-4 py-2 m-1 placeholder-gray-400 bg-transparent border-none appearance-none dark:text-gray-200 focus:outline-none focus:placeholder-transparent focus:ring-0"
               />
 
@@ -1953,7 +1947,7 @@
                 type="button"
                 class="h-10 px-4 py-2 m-1 text-white transition-colors duration-300 transform bg-green-500 rounded-md hover:bg-green-400 focus:outline-none focus:bg-green-400"
               >
-                Join Us
+                إنضم
               </button>
             </form>
           </div>
@@ -2432,7 +2426,7 @@
                 <div class="logo text-center">
                   <span
                     class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-br from-green-400 to-orange-600"
-                    >Financial.</span
+                    >أبشر.</span
                   >
                 </div>
                 <h3 class="text-gray-400">
@@ -2442,38 +2436,40 @@
               </div>
             </div>
             <div class="flex flex-col">
-              <div class="head text-3xl font-bold">Quick Links</div>
+              <div class="head text-3xl font-bold">روابط سريعة</div>
               <ul
                 class="list-none flex flex-col text-lg text-white gap-y-3 mt-5"
               >
-                <li><a href="#home">Home</a></li>
-                <li><a href="#Partners">Partners</a></li>
-                <li><a href="#Services">Services</a></li>
-                <li><a href="#FAQ">FAQ</a></li>
-                <li><a href="#">Privacy &amp; Policy</a></li>
-                <li><a href="#contact-us">Contact Us</a></li>
+                <li><a href="#home">الرئيسية</a></li>
+                <li><a href="#Partners">الشركاء</a></li>
+                <li><a href="#Services">الخدمات</a></li>
+                <li><a href="#FAQ">الأسئلة الشائعة</a></li>
+                <li><a href="#">الخصوصية</a></li>
+                <li><a href="#contact-us">الإتصال</a></li>
               </ul>
             </div>
             <div class="flex flex-col">
               <div class="flex flex-col text-white gap-y-3">
                 <div class="flex flex-col gap-y-2">
-                  <div class="text-white text-2xl">Location</div>
+                  <div class="text-white text-2xl">الموقع</div>
                   <p class="text-sm">
                     Saudi Arbia - Alreyad - street(name street)
                   </p>
                 </div>
                 <div class="flex flex-col gap-y-2">
-                  <div class="text-white text-2xl">Email</div>
+                  <div class="text-white text-2xl">البريد الإلكتروني</div>
                   <p class="text-sm">Fianacial23@gmail.com</p>
                 </div>
                 <div class="flex flex-col gap-y-2">
-                  <div class="text-white text-2xl">Call Us</div>
+                  <div class="text-white text-2xl">إتصل بنا</div>
                   <p class="text-sm">+00966 9084234521</p>
                 </div>
               </div>
             </div>
             <div class="flex flex-col">
-              <div class="head text-3xl font-bold w-full">Social Media</div>
+              <div class="head text-3xl font-bold w-full">
+                وسائل التواصل الاجتماعي
+              </div>
               <div class="grid grid-cols-3 text-white mt-5 gap-2 w-2/4">
                 <a
                   href="#"
@@ -2520,7 +2516,7 @@
         </div>
         <div class="copywrights copywrights py-10">
           <div class="flex justify-center items-center font-bold">
-            Copyrights © 2021
+            <span x-text="new Date().getFullYear()"></span> © الحقوق محفوظة
           </div>
         </div>
       </div>
