--- a/ar/pages/services/student.html
+++ b/ar/pages/services/student.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../../assets/css/font.css" />
     <!-- Link Swiper's CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="../../assets/css/mian.css" />
+    <link rel="stylesheet" href="../../../assets/css/mian.css" />
     <!-- tailwind cdd -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../../assets/js/tailwind.config.js"></script>
-    <title>Finance | Services - Student</title>
-    <link rel="stylesheet" href="../../assets/css/tailwind.features.css" />
+    <script src="../../../assets/js/tailwind.config.js"></script>
+    <title>أبشر | الخدمات - التمويـل الشخصي</title>
+    <link rel="stylesheet" href="../../../assets/css/tailwind.features.css" />
     <script src="//unpkg.com/alpinejs" defer></script>
   </head>
-  <body>
+  <body dir="rtl">
     <header class="container">
       <nav
         x-data="{ isOpen: false }"
@@ -30,8 +31,8 @@
               href="/"
             >
               <img
-                src="../../assets/img/logo/logo.jpeg"
-                class="w-[90px] h-[90px]"
+                src="../../../assets/img/logo/logo.jpeg"
+                class="w-[80px] h-[90px]"
               />
             </a>
           </div>
@@ -87,20 +88,14 @@
           class="absolute inset-x-0 z-20 w-full px-6 py-4 transition-all duration-300 ease-in-out bg-white shadow-md lg:bg-transparent lg:dark:bg-transparent lg:shadow-none dark:bg-gray-900 lg:mt-0 lg:p-0 lg:top-0 lg:relative lg:w-auto lg:opacity-100 lg:translate-x-0 lg:flex lg:items-center"
         >
           <div class="flex flex-col space-y-4 lg:mt-0 lg:flex-row lg:space-y-0">
-            <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-green-400 hover:text-green-500"
-              href="/"
-              >Home</a
+            <a class="text-gray-700 lg:mx-6 hover:text-green-400" href="#"
+              >الرئيسية</a
             >
-            <a
-              class="text-gray-700 lg:mx-6 hover:text-gray-500"
-              href="/about.html"
-              >About Us</a
+            <a class="text-gray-700 lg:mx-6 hover:text-green-500" href="#"
+              >من نحن</a
             >
-            <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-green-400 hover:text-green-500"
-              href="#"
-              >Partners</a
+            <a class="text-gray-700 lg:mx-6 hover:text-green-500" href="#"
+              >الشركاء</a
             >
             <div
               x-data="{ isServicesMenuOpen: false }"
@@ -109,9 +104,9 @@
               <div
                 x-cloak
                 @click="isServicesMenuOpen = !isServicesMenuOpen"
-                class="flex items-end hover:text-green-500 text-green-500 gap-x-2"
+                class="flex items-end text-green-500 hover:text-green-500 gap-x-2"
               >
-                <span>Services</span>
+                <span>الخدمات</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   class="w-4 h-4"
@@ -136,57 +131,48 @@
                 <ul class="w-full flex flex-col gap-y-4 text-sm">
                   <li class="">
                     <a
+                      class="hover:text-green-400 text-gray-500"
+                      href="/ar/pages/services/personal.html"
+                      >التمويل الشخصي</a
+                    >
+                  </li>
+                  <li class="">
+                    <a
+                      class="hover:text-green-400 text-green-500"
+                      href="/ar/pages/services/student.html"
+                      >تمويل الطلاب</a
+                    >
+                  </li>
+                  <li class="">
+                    <a
                       class="hover:text-green-500"
-                      href="/pages/services/personal.html"
-                      >Personal Finance</a
-                    >
-                  </li>
-                  <li class="">
-                    <a
-                      class="hover:text-green-500 text-green-500"
-                      href="/pages/services/student.html"
-                      >Students Finance</a
-                    >
-                  </li>
-                  <li class="">
-                    <a
-                      class="hover:text-green-500 text-gray-700"
-                      href="/pages/services/products.html"
-                      >Products Finance</a
+                      href="/ar/pages/services/products.html"
+                      >تمويل المنتجات</a
                     >
                   </li>
                   <li>
                     <a
                       class="hover:text-green-500"
-                      href="/pages/services/offers.html"
-                      >Offers</a
+                      href="/ar/pages/services/offers.html"
+                      >العروض</a
                     >
                   </li>
                 </ul>
               </div>
             </div>
-            <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-green-400 hover:text-green-500"
-              href="/faq.html"
-              >FAQ</a
-            >
-            <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-green-400 hover:text-green-500"
-              href="/contact.html"
-              >Contact</a
-            >
+            <a class="lg:mx-6 text-gray-700" href="faq.html">الأسئلة الشائعة</a>
+            <a class="lg:mx-6 text-gray-700" href="contact.html">الإتصال</a>
           </div>
 
           <a
-            class="block h-10 px-5 py-2 mt-4 text-sm text-center text-white capitalize transition-colors duration-300 transform border rounded-md lg:mt-0 bg-green-500 lg:w-auto"
+            class="block h-10 px-5 py-2 mt-4 text-sm text-center text-white bg-green-500 capitalize transition-colors duration-300 transform border rounded-md lg:mt-0 hover:bg-green-400 lg:w-auto"
             href="#"
           >
-            Login
+            تسجيل الدخول
           </a>
         </div>
       </nav>
     </header>
-
     <main>
       <!-- about us -->
       <div class="bg-white container section mb-20">
@@ -267,7 +253,7 @@
                 <div class="logo text-center">
                   <span
                     class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-br from-green-400 to-orange-600"
-                    >Financial.</span
+                    >أبشر.</span
                   >
                 </div>
                 <h3 class="text-gray-400">
@@ -277,38 +263,40 @@
               </div>
             </div>
             <div class="flex flex-col">
-              <div class="head text-3xl font-bold">Quick Links</div>
+              <div class="head text-3xl font-bold">روابط سريعة</div>
               <ul
                 class="list-none flex flex-col text-lg text-white gap-y-3 mt-5"
               >
-                <li><a href="#home">Home</a></li>
-                <li><a href="#Partners">Partners</a></li>
-                <li><a href="#Services">Services</a></li>
-                <li><a href="#FAQ">FAQ</a></li>
-                <li><a href="#">Privacy &amp; Policy</a></li>
-                <li><a href="#contact-us">Contact Us</a></li>
+                <li><a href="#home">الرئيسية</a></li>
+                <li><a href="#Partners">الشركاء</a></li>
+                <li><a href="#Services">الخدمات</a></li>
+                <li><a href="#FAQ">الأسئلة الشائعة</a></li>
+                <li><a href="#">الخصوصية</a></li>
+                <li><a href="#contact-us">الإتصال</a></li>
               </ul>
             </div>
             <div class="flex flex-col">
               <div class="flex flex-col text-white gap-y-3">
                 <div class="flex flex-col gap-y-2">
-                  <div class="text-white text-2xl">Location</div>
+                  <div class="text-white text-2xl">الموقع</div>
                   <p class="text-sm">
                     Saudi Arbia - Alreyad - street(name street)
                   </p>
                 </div>
                 <div class="flex flex-col gap-y-2">
-                  <div class="text-white text-2xl">Email</div>
+                  <div class="text-white text-2xl">البريد الإلكتروني</div>
                   <p class="text-sm">Fianacial23@gmail.com</p>
                 </div>
                 <div class="flex flex-col gap-y-2">
-                  <div class="text-white text-2xl">Call Us</div>
+                  <div class="text-white text-2xl">إتصل بنا</div>
                   <p class="text-sm">+00966 9084234521</p>
                 </div>
               </div>
             </div>
             <div class="flex flex-col">
-              <div class="head text-3xl font-bold w-full">Social Media</div>
+              <div class="head text-3xl font-bold w-full">
+                وسائل التواصل الاجتماعي
+              </div>
               <div class="grid grid-cols-3 text-white mt-5 gap-2 w-2/4">
                 <a
                   href="#"
@@ -355,7 +343,7 @@
         </div>
         <div class="copywrights copywrights py-10">
           <div class="flex justify-center items-center font-bold">
-            Copyrights © 2021
+            <span x-text="new Date().getFullYear()"></span> © الحقوق محفوظة
           </div>
         </div>
       </div>
