--- a/ar/index.html
+++ b/ar/index.html
@@ -172,7 +172,9 @@
                 </ul>
               </div>
             </div>
-            <a class="lg:mx-6 text-gray-700" href="faq.html">الأسئلة الشائعة</a>
+            <a class="lg:mx-6 text-green-500" href="faq.html"
+              >الأسئلة الشائعة</a
+            >
             <a class="lg:mx-6 text-gray-700" href="contact.html">الإتصال</a>
           </div>
 
