--- a/ar/pages/services/personal.html
+++ b/ar/pages/services/personal.html
@@ -160,8 +160,8 @@
                 </ul>
               </div>
             </div>
-            <a class="lg:mx-6 text-gray-700" href="faq.html">الأسئلة الشائعة</a>
-            <a class="lg:mx-6 text-gray-700" href="contact.html">الإتصال</a>
+            <a class="lg:mx-6 text-gray-700" href="/ar/faq.html">الأسئلة الشائعة</a>
+            <a class="lg:mx-6 text-gray-700" href="/ar/contact.html">الإتصال</a>
           </div>
 
           <a
