--- a/ar/about.html
+++ b/ar/about.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../assets/css/font.css" />
     <!-- Link Swiper's CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="assets/css/mian.css" />
+    <link rel="stylesheet" href="../assets/css/mian.css" />
     <!-- tailwind cdd -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="assets/js/tailwind.config.js"></script>
+    <script src="../assets/js/tailwind.config.js"></script>
     <title>Finance | About</title>
-    <link rel="stylesheet" href="assets/css/tailwind.features.css" />
+    <link rel="stylesheet" href="../assets/css/tailwind.features.css" />
     <script src="//unpkg.com/alpinejs" defer></script>
 
     <script src="https://unpkg.com/scrollreveal@4"></script>
@@ -23,7 +24,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"
     ></script>
   </head>
-  <body>
+  <body dir="rtl">
     <header class="container">
       <nav
         x-data="{ isOpen: false }"
@@ -93,19 +94,13 @@
           class="absolute inset-x-0 z-20 w-full px-6 py-4 transition-all duration-300 ease-in-out bg-white shadow-md lg:bg-transparent lg:dark:bg-transparent lg:shadow-none dark:bg-gray-900 lg:mt-0 lg:p-0 lg:top-0 lg:relative lg:w-auto lg:opacity-100 lg:translate-x-0 lg:flex lg:items-center"
         >
           <div class="flex flex-col space-y-4 lg:mt-0 lg:flex-row lg:space-y-0">
-            <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-blue-400 hover:text-blue-500"
-              href="#"
+            <a class="text-gray-700 lg:mx-6 hover:text-green-500" href="#"
               >الرئيسية</a
             >
-            <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-blue-400 hover:text-blue-500"
-              href="#"
+            <a class="text-green-500 lg:mx-6 hover:text-green-500" href="#"
               >من نحن</a
             >
-            <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-blue-400 hover:text-blue-500"
-              href="#"
+            <a class="text-gray-700 lg:mx-6 hover:text-green-500" href="#"
               >الشركاء</a
             >
             <div
@@ -115,7 +110,7 @@
               <div
                 x-cloak
                 @click="isServicesMenuOpen = !isServicesMenuOpen"
-                class="flex items-end hover:text-blue-500 gap-x-2"
+                class="flex items-end hover:text-green-500 gap-x-2"
               >
                 <span>الخدمات</span>
                 <svg
@@ -142,28 +137,28 @@
                 <ul class="w-full flex flex-col gap-y-4 text-sm">
                   <li class="">
                     <a
-                      class="hover:text-blue-500"
+                      class="hover:text-green-500"
                       href="/pages/services/personal.html"
                       >التمويل الشخصي</a
                     >
                   </li>
                   <li class="">
                     <a
-                      class="hover:text-blue-500"
+                      class="hover:text-green-500"
                       href="/pages/services/student.html"
                       >تمويل الطلاب</a
                     >
                   </li>
                   <li class="">
                     <a
-                      class="hover:text-blue-500"
+                      class="hover:text-green-500"
                       href="/pages/services/products.html"
                       >تمويل المنتجات</a
                     >
                   </li>
                   <li>
                     <a
-                      class="hover:text-blue-500"
+                      class="hover:text-green-500"
                       href="/pages/services/offers.html"
                       >العروض</a
                     >
@@ -171,8 +166,16 @@
                 </ul>
               </div>
             </div>
-            <a class="lg:mx-6 text-green-500" href="#">الأسئلة الشائعة</a>
-            <a class="lg:mx-6 text-gray-700" href="contact.html">الإتصال</a>
+            <a
+              class="lg:mx-6 hover:text-green-500 text-gray-700"
+              href="/ar/faq.html"
+              >الأسئلة الشائعة</a
+            >
+            <a
+              class="lg:mx-6 hover:text-green-500 text-gray-700"
+              href="/ar/contact.html"
+              >الإتصال</a
+            >
           </div>
 
           <a
@@ -189,9 +192,7 @@
       <!-- about us -->
       <header class="bg-white container section gsap_animate_about_1">
         <div class="mb-14">
-          <h1 class="text-5xl font-bold text-center w-full mb-6">
-            Why Choose Us
-          </h1>
+          <h1 class="text-5xl font-bold text-center w-full mb-6">لماذا نحن</h1>
           <p class="text-gray-900 text-center px-20">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio
             animi consectetur ex? Aut, tempora.
@@ -514,6 +515,6 @@
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"
     ></script>
-    <script defer src="assets/js/gsap.animation.js"></script>
+    <script defer src="../assets/js/gsap.animation.js"></script>
   </body>
 </html>
