--- a/ar/faq.html
+++ b/ar/faq.html
@@ -99,17 +99,17 @@
         >
           <div class="flex flex-col space-y-4 lg:mt-0 lg:flex-row lg:space-y-0">
             <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-blue-400 hover:text-blue-500"
+              class="text-gray-700 lg:mx-6 dark:hover:text-green-400 hover:text-green-500"
               href="#"
               >الرئيسية</a
             >
             <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-blue-400 hover:text-blue-500"
+              class="text-gray-700 lg:mx-6 dark:hover:text-green-400 hover:text-green-500"
               href="#"
               >من نحن</a
             >
             <a
-              class="text-gray-700 lg:mx-6 dark:hover:text-blue-400 hover:text-blue-500"
+              class="text-gray-700 lg:mx-6 dark:hover:text-green-400 hover:text-green-500"
               href="#"
               >الشركاء</a
             >
@@ -120,7 +120,7 @@
               <div
                 x-cloak
                 @click="isServicesMenuOpen = !isServicesMenuOpen"
-                class="flex items-end hover:text-blue-500 gap-x-2"
+                class="flex items-end hover:text-green-500 gap-x-2"
               >
                 <span>الخدمات</span>
                 <svg
@@ -147,28 +147,28 @@
                 <ul class="w-full flex flex-col gap-y-4 text-sm">
                   <li class="">
                     <a
-                      class="hover:text-blue-500"
+                      class="hover:text-green-500"
                       href="/pages/services/personal.html"
                       >التمويل الشخصي</a
                     >
                   </li>
                   <li class="">
                     <a
-                      class="hover:text-blue-500"
+                      class="hover:text-green-500"
                       href="/pages/services/student.html"
                       >تمويل الطلاب</a
                     >
                   </li>
                   <li class="">
                     <a
-                      class="hover:text-blue-500"
+                      class="hover:text-green-500"
                       href="/pages/services/products.html"
                       >تمويل المنتجات</a
                     >
                   </li>
                   <li>
                     <a
-                      class="hover:text-blue-500"
+                      class="hover:text-green-500"
                       href="/pages/services/offers.html"
                       >العروض</a
                     >
@@ -176,8 +176,14 @@
                 </ul>
               </div>
             </div>
-            <a class="lg:mx-6 text-green-500" href="#">الأسئلة الشائعة</a>
-            <a class="lg:mx-6 text-gray-700" href="contact.html">الإتصال</a>
+            <a class="lg:mx-6 hover:text-green-500 text-green-400" href="#"
+              >الأسئلة الشائعة</a
+            >
+            <a
+              class="lg:mx-6 hover:text-green-500 text-gray-700"
+              href="/ar/contact.html"
+              >الإتصال</a
+            >
           </div>
 
           <a
@@ -768,6 +774,132 @@
 
                 <p class="max-w-3xl px-4 text-gray-500 dark:text-gray-300">
                   فترات السداد المتاحة هي 36 أو 48 أو 60 شهر.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="text-3xl text-green-500 mt-16 mb-10">
+            المبيعات بالتقسيط (المرابحة)
+          </div>
+          <hr class="my-6 border-gray-200 dark:border-gray-700" />
+
+          <div
+            class="mt-16"
+            x-data="{ 
+            faqProductServices1: false,
+            faqProductsServices2: false,
+            activeClass: 'bg-indigo-800 focus:outline-none',
+        }"
+          >
+            <div class="gsap_animate_faq">
+              <button
+                @click="faqProductServices1 = ! faqProductServices1"
+                class="flex items-center focus:outline-none"
+              >
+                <svg
+                  :class="faqProductServices1 === true ? 'block' : 'hidden'"
+                  class="flex-shrink-0 w-6 h-6 text-green-500"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M20 12H4"
+                  ></path>
+                </svg>
+
+                <svg
+                  :class="faqProductServices1 === false ? 'block' : 'hidden'"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="flex-shrink-0 w-6 h-6 text-green-500"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M12 4v16m8-8H4"
+                  />
+                </svg>
+
+                <h1 class="mx-4 text-lg text-gray-700 dark:text-white">
+                  ما هي قيمة التمويل المتاحة؟
+                </h1>
+              </button>
+
+              <div
+                x-show="faqProductServices1"
+                x-collapse
+                class="flex mt-8 md:mx-10"
+              >
+                <span class="border border-green-500"></span>
+
+                <p class="max-w-3xl px-4 text-gray-500 dark:text-gray-300">
+                  .المبيعات بالتقسيط المرابحة تبدأ من ( 4 آالف وحتى 60 ألف ريال)
+                </p>
+              </div>
+            </div>
+
+            <hr class="my-8 border-gray-200 dark:border-gray-700" />
+
+            <div class="gsap_animate_faq">
+              <button
+                @click="faqProductsServices2 = !faqProductsServices2"
+                class="flex items-center focus:outline-none"
+              >
+                <svg
+                  :class="faqProductsServices2 === true ? 'block' : 'hidden'"
+                  class="flex-shrink-0 w-6 h-6 text-green-500"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M20 12H4"
+                  ></path>
+                </svg>
+
+                <svg
+                  :class="faqProductsServices2 === false ? 'block' : 'hidden'"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="flex-shrink-0 w-6 h-6 text-green-500"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M12 4v16m8-8H4"
+                  />
+                </svg>
+
+                <h1 class="mx-4 text-lg text-gray-700 dark:text-white">
+                  ما هي فترات السداد المتاحة؟
+                </h1>
+              </button>
+
+              <div
+                x-show="faqProductsServices2"
+                x-collapse
+                class="flex mt-8 md:mx-10"
+              >
+                <span class="border border-green-500"></span>
+
+                <p class="max-w-3xl px-4 text-gray-500 dark:text-gray-300">
+                  يمكن للعميل االختيار بين 12 أو 18 أو 24 أو 30 أو 36 شهرا
                 </p>
               </div>
             </div>
