little fixes on headers

--- a/ar/contact.html
+++ b/ar/contact.html
@@ -14,7 +14,7 @@
     <!-- tailwind cdd -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="../assets/js/tailwind.config.js"></script>
-    <title>Finance | Contact Us</title>
+    <title>ابشر | التواصل</title>
     <link rel="stylesheet" href="../assets/css/tailwind.features.css" />
     <script src="//unpkg.com/alpinejs" defer></script>
 
