language toggle icon added

--- a/ar/pages/services/offers.html
+++ b/ar/pages/services/offers.html
@@ -88,6 +88,51 @@
           class="absolute inset-x-0 z-20 w-full px-6 py-4 transition-all duration-300 ease-in-out bg-white shadow-md lg:bg-transparent lg:dark:bg-transparent lg:shadow-none dark:bg-gray-900 lg:mt-0 lg:p-0 lg:top-0 lg:relative lg:w-auto lg:opacity-100 lg:translate-x-0 lg:flex lg:items-center"
         >
           <div class="flex flex-col space-y-4 lg:mt-0 lg:flex-row lg:space-y-0">
+            <div
+              x-data="{ lang: false }"
+              class="text-gray-700 lg:mx-6 relative"
+            >
+              <div
+                x-cloak
+                @click="lang = !lang"
+                class="flex items-end hover:text-green-500 gap-x-2"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-5 h-5"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418"
+                  />
+                </svg>
+              </div>
+              <div
+                x-cloak
+                :class="[lang ? 'translate-x-0 opacity-100 ' : 'opacity-0 -translate-x-full']"
+                class="absolute inset-x-0 z-20 w-[200px] bg-white card rounded-lg shadow-md p-4 mt-3 transition-all duration-300 ease-in-out lg:translate-x-0"
+              >
+                <ul class="w-full flex flex-col gap-y-4 text-sm">
+                  <li class="">
+                    <a
+                      class="hover:text-green-400 text-green-500"
+                      href="/pages/services/offers.html"
+                      >English</a
+                    >
+                  </li>
+                  <li class="">
+                    <a class="hover:text-green-400 text-green-500" href="#"
+                      >العربية</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
             <a class="text-gray-700 lg:mx-6 hover:text-green-400" href="#"
               >الرئيسية</a
             >
