--- a/ar/pages/services/personal.html
+++ b/ar/pages/services/personal.html
@@ -126,7 +126,7 @@
                     >
                   </li>
                   <li class="">
-                    <a class="hover:text-green-400 text-green-500" href="#"
+                    <a class="hover:text-green-400" href="#"
                       >العربية</a
                     >
                   </li>
