--- a/ar/pages/services/student.html
+++ b/ar/pages/services/student.html
@@ -126,9 +126,7 @@
                     >
                   </li>
                   <li class="">
-                    <a class="hover:text-green-400 text-green-500" href="#"
-                      >العربية</a
-                    >
+                    <a class="hover:text-green-400" href="#">العربية</a>
                   </li>
                 </ul>
               </div>
